[package]
name = "observatory"
description = "MobX style observables"
repository = "https://github.com/joshua-maros/astro"
version = "0.1.1"
authors = ["Joshua Maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam = "0.8.0"
crossbeam-utils = "0.8.3"
